--- a/src/verify/comsecurity-verify.8
+++ b/src/verify/comsecurity-verify.8
@@ -25,11 +25,11 @@
 .\" SUCH DAMAGE.
 .\"
 .Dd February 11, 2021
-.Dt OPNSENSE-VERIFY 8
+.Dt COMSECURITY-VERIFY 8
 .Os
 .Sh NAME
-.Nm opnsense-verify
-.Nd OPNsense signature verification
+.Nm comsecurity-verify
+.Nd .Com Security signature verification
 .Sh SYNOPSIS
 .Nm
 .Op Fl q
@@ -64,13 +64,13 @@ Use the repository name
 .Ar reponame
 to find signature information.
 The default is
-.Sq OPNsense .
+.Sq .Com Security .
 .El
 .Sh EXIT STATUS
 .Ex -std
 .Sh SEE ALSO
 .Xr pkg.conf 5 ,
-.Xr opnsense-sign 8 ,
+.Xr comsecurity-sign 8 ,
 .Xr pkg 8
 .Sh AUTHORS
 .An Franco Fichtner Aq Mt franco@opnsense.org
